# envoy

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.gitlab/issue_templates/: Default.md  Feature.md
.gitlab/merge_request_templates/: Default.md  Hotfix.md  Release.md
finch/: Cargo.toml
finch/benches/: bench_sanitize_number.rs
finch/src/: lib.rs
finch/src/twilio/: e164.rs  mod.rs
finch/tests/: e164_test.rs
msg/: Cargo.toml  config.json  database.sql
msg/src/: config.rs  lib.rs  logger.rs  main.rs
