[package]
name = "msg"
version = "0.1.0"
edition = "2021"
authors = ["Israel Bermudez Sepulveda <israel.bermudez@proton.me>"]
license = "Apache-2.0"

[dependencies]
finch = { path = "../finch" }
sentry = "0.34.0"
serde = "1.0.210"
sonic-rs = "0.3.13"
clap = { version = "4.5.18", features = ["derive", "env" ] }
libsql = { version = "0.6.0", features = ["remote"] }
tokio = "1.40.0"

